# watschel_ws

./: .gitattributes  .gitignore  .gitmodules  README.md
reinforcement_learning/: train_watschel.py
reinforcement_learning/ressources/: watschel_policy.dict
reinforcement_learning/watschel_env/: setup.py  train_watschel.ipynb
reinforcement_learning/watschel_env/watschel_env/: test.ipynb
reinforcement_learning/watschel_env/watschel_env.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
reinforcement_learning/watschel_env/watschel_env/envs/: __init__.py  policy_network.py  watschel_env.py
src/brundhilde_description/: setup.py
src/brundhilde_description/resource/rviz/: brunhilde.rviz
src/brundhilde_description/resource/xacro/: brunhilde.urdf
src/brunhilde_bringup/: README.md  package.xml  setup.cfg  setup.py
src/brunhilde_bringup/launch/: bringup.launch.py  bringup_watschel.launch.py  publishers.launch.py  rviz.launch.py
src/brunhilde_control/: README.md  package.xml  setup.cfg  setup.py
src/brunhilde_control/brunhilde_control/: standup.py  testMovements.py
src/brunhilde_control/config/: ros2_control.yaml
src/brunhilde_control/launch/: control.launch.py  mock_control.launch.py  sim_control.launch.py
src/brunhilde_description/: package.xml  setup.cfg  setup.py
src/brunhilde_description/brunhilde_description/: make_urdf.py
src/brunhilde_description/config/: config_solo8.yaml
src/brunhilde_description/meshes/3d_modelle/Left_leg/: Foot.stl
src/brunhilde_description/resource/rviz/: brunhilde.rviz
src/brunhilde_description/resource/urdf/: brunhilde.urdf
src/brunhilde_description/resource/xacro/: README.md  brunhilde.urdf.xacro  brunhilde_gazebo.xacro  brunhilde_ros2_control.urdf.xacro  leg.xacro
src/brunhilde_description/resource/xacro/collisions/: solo_body.stl  solo_lower_leg_v2_left_side.stl  solo_lower_leg_v2_right_side.stl  solo_upper_leg_left_side.stl  solo_upper_leg_right_side.stl
src/brunhilde_gz_sim/: package.xml  setup.cfg  setup.py
src/brunhilde_gz_sim/config/: gz_bridge.yaml
src/brunhilde_gz_sim/launch/: gz_sim.launch.py  spawn.launch.py
src/brunhilde_joy/: package.xml  setup.cfg  setup.py
src/brunhilde_teleop/: package.xml  setup.py
src/brunhilde_teleop/brunhilde_teleop/: listener.py
src/docker/: Dockerfile  build.sh  entrypoint.sh
src/watschel_bringup/: README.md  package.xml  setup.cfg  setup.py
src/watschel_bringup/launch/: bringup.launch.py  bringup_watschel.launch.py  joy.launch.py  rviz.launch.py
src/watschel_control/: README.md  package.xml  setup.cfg  setup.py
src/watschel_control/brunhilde_control/: testMovements.py
src/watschel_control/config/: ros2_control.yaml
src/watschel_control/launch/: control.launch.py  mock_control.launch.py  sim_control.launch.py
src/watschel_control/watschel_control/: node_backup.py  testMovements.py
src/watschel_description/: package.xml  setup.cfg  setup.py
src/watschel_description/config/: config_solo8.yaml
src/watschel_description/meshes/3d_modelle/Left_leg/: Low_leg_back.stl  Top_leg_back.stl  Top_leg_front.stl  left_leg_foot_attachment.stl
src/watschel_description/meshes/3d_modelle/Right_leg/: Foot.stl  Low_leg_back.stl  Low_leg_front.stl  Top_leg_front.stl  right_leg_foot_attachment.stl
src/watschel_description/resource/rviz/: brunhilde.rviz
src/watschel_description/resource/xacro/: example_robot.urdf.xacro  watschel.urdf  watschel_ros2_control.urdf.xacro  watschel_ros2_control_mimics.xacro
src/watschel_description/watschel_description/: make_urdf.py
src/watschel_gz_sim/: package.xml  setup.cfg  setup.py
src/watschel_gz_sim/config/: gz_bridge.yaml
src/watschel_gz_sim/launch/: gz_sim.launch.py  spawn.launch.py
src/watschel_gz_sim/worlds/: flat.sdf  test.sdf
src/watschel_teleop/: package.xml  setup.cfg  setup.py
